botconfig_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $IMAGE_NAME
  namespace: default
  labels:
    app: $IMAGE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $IMAGE_NAME
  template:
    metadata:
      labels:
        app: $IMAGE_NAME
    spec:
      containers:
        - name: $IMAGE_NAME
          image: $COMPANY_NAME/$IMAGE_NAME
          command: ["python3", "/tmp/main.py"]
          ports:
            - containerPort: 8080
              name: http
