botconfig.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $IMAGE_NAME
spec:
  selector:
    matchLabels:
      app: $IMAGE_NAME
  template:
    metadata:
      labels:
        app: $IMAGE_NAME
    spec:
      containers:
        - name: nginx
          image: dialogs/prometheus-sending-bot
          command: ["python3", "/tmp/main.py"]
          ports:
            - containerPort: 8080 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: $IMAGE_NAME
  name: $IMAGE_NAME
spec:
  selector:
    app: $IMAGE_NAME
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  externalIPs:
  - 139.59.202.125
