botconfig_service.yml
apiVersion: v1
kind: Service
metadata:
  name: $IMAGE_NAME
  namespace: default
  labels:
    app: $IMAGE_NAME
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: $IMAGE_NAME
