botconfig_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $IMAGE_NAME
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: $IMAGE_NAME
          servicePort: 8080
